# game-c

./: .gitmodules  CMakeLists.txt
src/: main.cpp
